# gazebo-rcll

./: .gitignore  CMakeLists.txt  Makefile  README.md
.circleci/: config.yml
.github/: stale.yml
cfg/: config.yaml
etc/buildsys/: config.mk  protobuf_msgs.mk
models/carologistics-robotino/: README.md  model-with-wheels.sdf  model.sdf
models/conveyor-cam/: model.config  model.sdf
models/depthcam/: model.config  model.sdf
models/german_open_field/: .#model_1_4.sdf  model.config  model.sdf  model_1_4.sdf
models/ground_plane/: model.sdf
models/infrared_sensor/: model.config  model.sdf
models/label/: model.config  model.sdf
models/light_signals/: model.sdf  (+1 more)
plugins/src/: CMakeLists.txt
plugins/src/libs/: CMakeLists.txt  Makefile
plugins/src/libs/config/: CMakeLists.txt  Makefile  config.cpp  config.h  yaml.cpp  yaml.h  yaml_node.h
plugins/src/libs/configurable/: CMakeLists.txt  Makefile  configurable.cpp  configurable.h
plugins/src/libs/core/: CMakeLists.txt  Makefile  assert_exception.h  exception.cpp  exception.h  macros.h  plugin.h  version.h
plugins/src/libs/core/exceptions/: software.cpp  software.h  system.cpp  system.h
plugins/src/libs/core/qa/: qa_waitcond.cpp
plugins/src/libs/core/threading/: barrier.h  interruptible_barrier.cpp  interruptible_barrier.h  mutex.h  mutex_data.h  mutex_locker.cpp  mutex_locker.h  read_write_lock.h  recursive_mutex.h  refc_rwlock.h  scoped_rwlock.cpp  scoped_rwlock.h  spinlock.h  thread.cpp  thread.h  thread_collector.h  thread_finalizer.h  thread_initializer.cpp  thread_initializer.h  thread_list.cpp  thread_list.h  thread_notification_listener.h  wait_condition.cpp  wait_condition.h
plugins/src/libs/core/utils/: lock_hashmap.h  lock_hashset.h  lock_list.h  lock_map.h  lock_multimap.h  lock_queue.h  lock_set.h  lock_vector.h  lockptr.h  refcount.h  refptr.h  rwlock_list.h  rwlock_map.h  rwlock_queue.h  rwlock_vector.h
plugins/src/libs/gazsim_msgs/: CMakeLists.txt  NewPuck.proto  WorkpieceCommand.proto
plugins/src/libs/llsf_msgs/: AttentionMessage.proto  BeaconSignal.proto  CMakeLists.txt  ConveyorVisionResult.proto  ExplorationInfo.proto  GameInfo.proto  GameState.proto  LightSignals.proto  LockMasterAnnounce.proto  LockMessage.proto  MachineCommands.proto  MachineDescription.proto  MachineInfo.proto  MachineInstructions.proto  MachineReport.proto  Makefile  OrderInfo.proto  Pose2D.proto  Pose3D.proto  PreparedForProduction.proto  ProductColor.proto  PuckDetectionResult.proto  PuckInfo.proto  RingInfo.proto  RobotCommands.proto  RobotInfo.proto  SimTimeSync.proto  Sync.proto  Team.proto  Time.proto  VersionInfo.proto  Worldmodel.proto  Zone.proto
plugins/src/libs/mps_comm/: Makefile  freeopcua.mk  mps_server.cpp  mps_server.h  spdlog.mk
plugins/src/libs/protobuf_comm/: CMakeLists.txt  Makefile  client.cpp  client.h  crypto.cpp  crypto.h  frame_header.h  message_register.cpp  message_register.h  peer.cpp  peer.h  queue_entry.h  server.cpp  server.h
plugins/src/libs/utils/: CMakeLists.txt  Makefile
plugins/src/libs/utils/llsf/: machines.cpp  machines.h
plugins/src/libs/utils/misc/: gazebo_api_wrappers.h  string_compare.cpp  string_compare.h  string_conversions.cpp  string_conversions.h  string_split.h
plugins/src/libs/utils/system/: argparser.cpp  argparser.h  console_colors.h  hostinfo.cpp  hostinfo.h
plugins/src/plugins/: CMakeLists.txt  Makefile
plugins/src/plugins/carologistics-robotino/: Makefile  config.h  gripper_laser_sensor.cpp  gripper_laser_sensor.h  infraredPuckSensor.cpp  infraredPuckSensor.h  machineVision.cpp  machineVision.h  messageDisplay.cpp  messageDisplay.h  puck_detection.cpp  puck_detection.h  puck_holder.cpp  puck_holder.h  robotino.cpp  robotino.h  simDevice.cpp  simDevice.h
plugins/src/plugins/conveyor-vision/: CMakeLists.txt  Makefile  conveyor_vision.cpp  conveyor_vision.h
plugins/src/plugins/depthcam/: CMakeLists.txt  Makefile  depthcam.cpp  depthcam.h
plugins/src/plugins/floor-clean/: Makefile  floor_clean.cpp  floor_clean.h
plugins/src/plugins/gripper/: CMakeLists.txt  Makefile  gripper.cpp  gripper.h
plugins/src/plugins/gyro/: CMakeLists.txt  Makefile  gyro.cpp  gyro.h
plugins/src/plugins/light-control/: CMakeLists.txt  Makefile  light_control.cpp  light_control.h
plugins/src/plugins/light-signal-detection/: CMakeLists.txt  Makefile  light-signal-detection.cpp  light-signal-detection.h
plugins/src/plugins/llsf/: Makefile  data_table.cpp  data_table.h  field_referee.cpp  field_referee.h  light_control.cpp  light_control.h  llsf_world.cpp  llsf_world.h  puck_localization.cpp  puck_localization.h  refbox_comm.cpp  refbox_comm.h  rfid_sensors.cpp  rfid_sensors.h  simulation_control.cpp  simulation_control.h  time_sync.cpp  time_sync.h
plugins/src/plugins/llsf-refbox-comm/: CMakeLists.txt  Makefile  llsf_refbox_comm.cpp  llsf_refbox_comm.h
plugins/src/plugins/localization/: CMakeLists.txt  Makefile  gps.cpp  gps.h
plugins/src/plugins/motor/: CMakeLists.txt  Makefile  motor.cpp
plugins/src/plugins/mps/: CMakeLists.txt  Makefile  base_station.cpp  base_station.h  cap_station.cpp  cap_station.h  delivery_station.cpp  delivery_station.h  durations.h  mps.cpp  mps.h  mps_loader.cpp  mps_loader.h  opcua_server_config.h  ring_station.cpp  ring_station.h  storage_station.cpp  storage_station.h  subclient.h  tag-mps-matching.txt
plugins/src/plugins/mps-opcua/: Makefile  delivery_station.cpp  delivery_station.h  mps.h  mps_opcua.cpp  mps_opcua.h  ring_station.cpp  ring_station.h  storage_station.cpp  storage_station.h
plugins/src/plugins/mps-placement/: CMakeLists.txt  Makefile  mps_placement.cpp  mps_placement.h
plugins/src/plugins/odometry/: CMakeLists.txt  Makefile  odometry.cpp  odometry.h
plugins/src/plugins/puck/: CMakeLists.txt  Makefile  puck.cpp  puck.h
plugins/src/plugins/tag/: CMakeLists.txt  Makefile  tag.cpp  tag.h
plugins/src/plugins/tag-vision/: CMakeLists.txt  Makefile  tag-vision.cpp  tag-vision.h
plugins/src/plugins/time-sync/: CMakeLists.txt  Makefile  time_sync.cpp  time_sync.h
src/: Makefile
worlds/: bbu_2015.world
(+217 files in other folders)
